[metadata]
name = z2g
summary = Zabbix to Graphite
description-file =
    README.md
author = 
author-email = 
home-page = 
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    z2g

[entry_points]

console_scripts =
    z2g = z2g.cmd.cmd:main
